--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <div class="contact">
         <h4>contact us</h4>
         <p>Dr Dhirendrasinh thakor</p>
-        <p>Mob No:1234567890</p>
-        <p>wattsup No:1234567890</p>
+        <p>Mob No:+91 9426566876</p>
+        <p>wattsup No:+91 9426566876</p>
       </div>
       <div class="link">
         <h4>Our Proudct</h4>
